--- a/index.html
+++ b/index.html
@@ -193,6 +193,14 @@
     </ul>
 </nav>
 <br>
+<footer class="footer">
+    <div class="container">
+        <p class="float-right">
+            <a href="#">Наверх</a>
+        </p>
+        <span class="text-muted">Агентство по разработке потрясных сайтов на bootstrap, drf и nuxtJS. А это просто наш блог.</span>
+    </div>
+</footer>
 
 <!-- Optional JavaScript; choose one of the two! -->
 
