--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="#" class="nav-link">Главная</a>
             </li>
             <li class="nav-item ">
-                <a href="#" class="nav-link">Контакты</a>
+                <a href="contact.html" class="nav-link">Контакты</a>
             </li>
         </ul>
         <form action="" class="form-inline my-2 my-lg-0">
