--- a/search.html
+++ b/search.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
           integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Контакты</title>
+    <title>Результаты поиска</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
@@ -27,7 +27,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a href="#" class="nav-link">Главная</a>
+                <a href="index.html" class="nav-link">Главная</a>
             </li>
             <li class="nav-item active">
                 <a href="#" class="nav-link">Контакты</a>
@@ -42,68 +42,59 @@
         <a href="#" class="btn btn-outline-light">Выход</a>
     </div>
 </nav>
+
 <div class="container-fluid home-slider">
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" style="background-color: #343a40!important">
                 <div class="carousel-caption d-none d-md-block">
-                    <h1>Написать мне</h1>
+                    <form action="" class="my-2 my-lg-0">
+                        <input type="text" class="form-control" placeholder="Поиск" aria-label="Поиск">
+                        <button class="btn btn-outline-success mt-3" type="submit">Поиск</button>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
             <nav aria-label="breadcrumb" class="mt-4">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Главная</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Контакты</li>
+                    <li class="breadcrumb-item active" aria-current="page">Поиск</li>
                 </ol>
             </nav>
 
-            <p class="lead">Чтобы связаться со мной заполните форму обратной связи</p>
-            <form name="contact-form" action="">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="md-form mb-0">
-                            <label for="name" class="sr-only">Ваше имя</label>
-                            <input type="text" id="name" class="form-control" placeholder="Ваше имя">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="md-form mb-0">
-                            <label for="email" class="sr-only">Ваша почта</label>
-                            <input type="text" id="email" class="form-control" placeholder="Ваша почта">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row mt-3">
-                    <div class="col-md-12">
-                        <div class="md-form mb-0">
-                            <label for="subject" class="sr-only">Тема</label>
-                            <input type="text" id="subject" class="form-control" placeholder="Тема">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row mt-3">
-                    <div class="col-md-12">
-                        <div class="md-form">
-                            <label for="message" class="sr-only">Ваше сообщение</label>
-                            <textarea type="text" id="message" rows="2" class="form-control md-textarea" placeholder="Ваше сообщение"></textarea>
-                        </div>
-                    </div>
-                </div>
-            </form>
-            <div class="text-center text-md-left mt-3">
-                <button class="btn btn-primary" type="submit">Отправить</button>
-            </div>
+            <p class="lead">Найдено записей: 3</p>
+            <a href=""><h2>Заголовок поста 1</h2></a>
+            <p>Это красткое описание поста. Это красткое описание поста. Это красткое описание поста.</p>
+            <hr>
+            <a href=""><h2>Заголовок поста 2</h2></a>
+            <p>Это красткое описание поста. Это красткое описание поста. Это красткое описание поста.</p>
+            <hr>
+            <a href=""><h2>Заголовок поста 3</h2></a>
+            <p>Это красткое описание поста. Это красткое описание поста. Это красткое описание поста.</p>
+            <hr>
         </div>
     </div>
 </div>
+
+<nav aria-label="Paginate me">
+    <ul class="pagination justify-content-center">
+        <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1">Предыдущая</a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+            <a class="page-link" href="#">Следующая</a>
+        </li>
+    </ul>
+</nav>
 
 <footer class="footer">
     <div class="container">
